--- a/style.css
+++ b/style.css
@@ -64,14 +64,21 @@ body{
   font-family: var(--ff-secondary);
   flex-direction: column;
   grid-gap: 20px;
-  margin-top: 40px;
   background-color: var(--clr-grey-9)
 }
 
+.heading{
+  font-size: 50px;
+  text-align: center;
+  font-family: var(--ff-primary);
+  font-style: italic;
+  text-decoration: underline;
+  color: var(--clr-grey-9)
+}
 
 select{
   background-color: var(--clr-primary-1);
-  color: var(--clr-primary-10);
+  color: var(--clr-grey-10);
   font-size:15px ;
 }
 
