--- a/style.css
+++ b/style.css
@@ -73,7 +73,10 @@ body{
   font-family: var(--ff-primary);
   font-style: italic;
   text-decoration: underline;
-  color: var(--clr-grey-9)
+  color: var(--clr-grey-9);
+  background-color: var(--clr-grey-1);
+  color: #fff;
+  border-radius: 10px;
 }
 
 select{
