--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ p{
   border-radius: 10px;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
   h1 {
     font-size: 4rem;
   }
